--- a/src/layout/layout.module.scss
+++ b/src/layout/layout.module.scss
@@ -6,13 +6,14 @@
     margin-bottom: unset;
 
     .navItem {
-        font-weight: 500;
+        font-weight: bold;
         list-style-type: none;
 
         .navLink {
             color: #00894f;
             transition: all 0.5s;
             font-size: 20px;
+            text-transform: uppercase;
         }
 
         &.active {
@@ -86,26 +87,9 @@
             }
         }
 
-        .buttonMic {
-            flex: 1 0 auto;
-            display: flex;
-            cursor: pointer;
-            align-items: center;
-            border: 0;
-            background: transparent;
-            outline: none;
-            padding: 0 8px;
-
-            .goxjub {
-                height: 28px;
-                width: 28px;
-                vertical-align: middle;
-            }
-        }
-
         input {
             font-size: 20px;
-            width: 260px;
+            width: 180px;
             height: 100%;
             border: 0;
             background: transparent;
