--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -13,8 +13,7 @@
     }
 }
 
-.carouselProduct {
-
+.carouselCertificationBackground {
     .productBrandName {
         position: relative;
         height: 150px;
@@ -24,147 +23,117 @@
         padding-top: 15px;
 
         h2 {
-            position: absolute;
-            color: #ededed;
-            font-size: 5em;
+            position: relative;
+            color: #00894f;
+            font-size: 3.5em;
             margin-bottom: unset;
-
-            &:nth-child(1) {
-                color: transparent;
-                -webkit-text-stroke: 2px #00894f;
-            }
-
-            &:nth-child(2) {
-                color: #00894f;
-                animation: animateText 4s ease-in-out infinite;
-            }
+            font-weight: bold;
+            text-transform: uppercase;
 
             &::after {
                 content: "";
                 width: 200px;
-                height: 4px;
+                height: 3px;
                 background: linear-gradient(to right, #00894f, #8dc63f);
                 position: absolute;
                 transform: translate(-50%, 50%);
-                top: 100%;
+                top: 50%;
                 left: 50%;
             }
         }
     }
-}
 
-@keyframes animateText {
-
-    0%,
-    100% {
-        clip-path: polygon(0% 45%, 15% 44%, 32% 50%, 54% 60%, 70% 61%, 84% 59%, 100% 52%, 100% 100%, 0% 100%);
-    }
-
-    50% {
-        clip-path: polygon(0% 60%, 16% 65%, 34% 66%, 51% 62%, 67% 50%, 84% 45%, 100% 46%, 100% 100%, 0% 100%);
-    }
-}
-
-.certificationCarousel {
-    padding: 0 10px 0 50px;
-
-    .certificationCard {
-        z-index: 1;
-        position: relative;
-        border-radius: 1.5rem;
-        margin-bottom: 4rem;
-        overflow: hidden;
-        text-align: center;
-        padding-top: 15px;
-        width: 90% !important;
-
-        &::before {
-            position: absolute;
-            content: '';
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            height: 4px;
-            border-bottom: 4px dashed transparent;
-            border-left: 4px dashed transparent;
-            border-radius: 1.5rem;
-            transform: translateX(100%);
-            -webkit-transform: translateX(100%);
-            -moz-transform: translateX(100%);
-            -ms-transform: translateX(100%);
-            -o-transform: translateX(100%);
-        }
-
-        &::after {
-            position: absolute;
-            content: '';
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 4px;
-            border-top: 4px dashed transparent;
-            border-right: 4px dashed transparent;
-            border-radius: 1.5rem;
-            transform: translateX(-100%);
-            -webkit-transform: translateX(-100%);
-            -moz-transform: translateX(-100%);
-            -ms-transform: translateX(-100%);
-            -o-transform: translateX(-100%);
-        }
-
-        &:hover {
+    .certificationCarousel {
+        padding: 0 20px 0 20px;
+    
+        .certificationCard {
+            text-align: center;
+            margin-bottom: 4rem;
+    
             .certificationCardImage {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+    
                 img {
-                    transform: scale(1.01);
+                    width: 300px;
+                    height: 430px;
+                    animation: transform 4s ease-in-out;
+                    border: 8px solid #00894f;
+                    padding: 10px;
                 }
             }
-
-            &::before {
-                border-color: #00894f;
-                height: 100%;
-                transform: translateX(0);
-                -webkit-transform: translateX(0);
-                -moz-transform: translateX(0);
-                -ms-transform: translateX(0);
-                -o-transform: translateX(0);
-                transition: .3s transform linear, .3s height linear .3s;
-                -webkit-transition: .3s transform linear, .3s height linear .3s;
-                -moz-transition: .3s transform linear, .3s height linear .3s;
-                -o-transition: .3s transform linear, .3s height linear .3s;
+    
+            h1 {
+                font-size: 20px;
+                font-weight: bold;
+                color: #00894f;
+                margin-top: 10px;
             }
+        }
+    }
+}
+
+.carouselProductBackground {
+    .productTitle {
+        position: relative;
+        height: 150px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        padding-top: 15px;
+
+        h2 {
+            position: relative;
+            color: #00894f;
+            font-size: 3.5em;
+            margin-bottom: unset;
+            font-weight: bold;
+            text-transform: uppercase;
 
             &::after {
-                border-color: #00894f;
-                height: 100%;
-                transform: translateX(0);
-                -webkit-transform: translateX(0);
-                -moz-transform: translateX(0);
-                -ms-transform: translateX(0);
-                -o-transform: translateX(0);
-                transition: .3s transform linear, .3s height linear .3s;
-                -webkit-transition: .3s transform linear, .3s height linear .3s;
-                -moz-transition: .3s transform linear, .3s height linear .3s;
-                -o-transition: .3s transform linear, .3s height linear .3s;
+                content: "";
+                width: 200px;
+                height: 3px;
+                background: linear-gradient(to right, #00894f, #8dc63f);
+                position: absolute;
+                transform: translate(-50%, 50%);
+                top: 50%;
+                left: 50%;
             }
         }
+    }
 
-        .certificationCardImage {
-            display: flex;
-            align-items: center;
-            justify-content: center;
+    .productCarousel {
+        padding: 0 20px 0 20px;
 
-            img {
-                width: 300px;
-                height: 430px;
-                animation: transform 4s ease-in-out;
+        .productCard {
+            text-align: center;
+            margin-bottom: 4rem;
+            box-shadow: 4px 4px 10px -1px #1D4486;
+            width: 75% !important;
+    
+            .productCardImage {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+    
+                img {
+                    width: 300px;
+                    height: 300px;
+                }
             }
-        }
+    
+            h1 {
+                font-size: 20px;
+                font-weight: bold;
+                color: #00894f;
+                margin-top: 10px;
+            }
 
-        h1 {
-            font-size: 20px;
-            font-weight: bold;
-            color: #00894f;
-            margin-top: 10px;
+            h4 {
+                color: #00894f;
+            }
         }
     }
 }
