--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -55,12 +55,13 @@
                 align-items: center;
                 justify-content: center;
 
-                img {
+                .certificationCardImg {
                     width: 300px;
                     height: 430px;
                     animation: transform 4s ease-in-out;
                     border: 8px solid #00894f;
                     padding: 10px;
+                    border-radius: 5px;
                 }
             }
 
