--- a/src/components/company-profile/company-profile.module.scss
+++ b/src/components/company-profile/company-profile.module.scss
@@ -235,7 +235,7 @@
 .whyChooseUs {
     width: 100%;
     height: 520px;
-    background-color: white;
+    background-color: #EDEDED;
     padding-top: 50px;
     display: flex;
     justify-content: center;
