--- a/src/components/who-we-are/who-we-are.module.scss
+++ b/src/components/who-we-are/who-we-are.module.scss
@@ -298,7 +298,7 @@
 .whyChooseUs {
     width: 100%;
     height: 520px;
-    background-color: white;
+    background-color: #EDEDED;
     padding-top: 50px;
     display: flex;
     justify-content: center;
