--- a/src/components/beverage-packaging-design/beverage-packaging-design.module.scss
+++ b/src/components/beverage-packaging-design/beverage-packaging-design.module.scss
@@ -181,6 +181,43 @@
     }
 }
 
+.carouselProductBackground {
+    margin-top: 10px;
+    
+    .productCarousel {
+        padding: 0 20px 0 20px;
+
+        .productCard {
+            text-align: center;
+            margin-bottom: 4rem;
+            box-shadow: 4px 4px 10px -1px #1D4486;
+            width: 75% !important;
+
+            .productCardImage {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                img {
+                    width: 300px;
+                    height: 300px;
+                }
+            }
+
+            h1 {
+                font-size: 20px;
+                font-weight: bold;
+                color: #00894f;
+                margin-top: 10px;
+            }
+
+            h4 {
+                color: #00894f;
+            }
+        }
+    }
+}
+
 .whyChooseUs {
     width: 100%;
     height: 520px;
